// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomStringInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        aria-hidden="true"
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      />
      <div
        aria-hidden="true"
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      >
        Address
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant="eq"
          aria-controls="clay-id-2"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-2"
          class="form-control form-control-select form-control-select-secondary show"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          is
        </button>
      </div>
      <div
        aria-hidden="true"
        class="form-group-item"
        data-aria-hidden="true"
      >
        <div
          class="input-group select-input-root"
        >
          <div
            class="input-group-item"
          >
            <input
              aria-autocomplete="list"
              aria-controls="clay-id-3"
              aria-labelledby="clay-autocomplete-label-1"
              autocomplete="off"
              autocorrect="off"
              class="form-control input-group-inset input-group-inset-after"
              id="clay-autocomplete-1"
              role="combobox"
              spellcheck="false"
              type="text"
              value=""
            />
            <div
              aria-label="Loading"
              aria-valuemax="100"
              aria-valuemin="0"
              class="input-group-inset-item input-group-inset-item-after"
              role="progressbar"
            >
              <span
                class="inline-item inline-item-middle"
              >
                <span
                  aria-hidden="true"
                  class="loading-animation loading-animation-sm"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomStringInput should render with data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        aria-hidden="true"
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      />
      <div
        aria-hidden="true"
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      >
        Address
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant="eq"
          aria-controls="clay-id-6"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-6"
          class="form-control form-control-select form-control-select-secondary show"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          is
        </button>
      </div>
      <div
        aria-hidden="true"
        class="form-group-item"
        data-aria-hidden="true"
      >
        <div
          class="input-group select-input-root"
        >
          <div
            class="input-group-item"
          >
            <input
              aria-autocomplete="list"
              aria-controls="clay-id-7"
              aria-labelledby="clay-autocomplete-label-1"
              autocomplete="off"
              autocorrect="off"
              class="form-control input-group-inset input-group-inset-after"
              id="clay-autocomplete-1"
              role="combobox"
              spellcheck="false"
              type="text"
              value="123 West Road"
            />
            <div
              aria-label="Loading"
              aria-valuemax="100"
              aria-valuemin="0"
              class="input-group-inset-item input-group-inset-item-after"
              role="progressbar"
            >
              <span
                class="inline-item inline-item-middle"
              >
                <span
                  aria-hidden="true"
                  class="loading-animation loading-animation-sm"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
